@@ -1,5 +1,7 @@
 2002-01-21  Anders Carlsson  <andersca@gnu.org>
 
+	* main.c: Get the theme name right.
+
 	* control/control.c (create_form): Use a GtkTreeView instead of a
 	clist.
 
